--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <script>
-      const loadingFailed = (error) => {
-        console.log("An error occured " + error)
-      }
-    </script>
-    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXUo&libraries=places' onerror='loadingFailed'></script>
+
+    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXUo&libraries=places'></script>
 
   </body>
 </html>
