--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     </noscript>
     <div id="root"></div>
 
+    <!-- API call to load Google Maps -->
     <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXUo&libraries=places'></script>
 
   </body>
