--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
 
     <!-- API call to load Google Maps -->
-    <script async defer src='https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&libraries=places'></script>
+    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXU&libraries=places'></script>
 
   </body>
 </html>
