--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,14 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script>
+    function gm_authFailure() {
+      window.alert("Something went wrong. Please check your Google Maps API key or internet connection and reload the browser")
+    }
+    </script>
 
     <!-- API call to load Google Maps -->
-    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXU&libraries=places'></script>
+    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAJXMovp8dRBqQWb5wrOd9qgzQ8zMfnXUo&libraries=places'></script>
 
   </body>
 </html>
